# coqui-stt-sys

./: Cargo.toml
.github/workflows/: test.yml
src/: bindings.rs  lib.rs
