[package]
name = "coqui-stt-sys"
version = "1.3.1"
authors = ["0/0 <zero@imaskeleton.me>"]
edition = "2021"
description = "FFI bindings to Coqui STT"
license = "MPL-2.0"
documentation = "https://docs.rs/coqui-stt-sys"
repository = "https://github.com/tazz4843/coqui-stt-sys"
keywords = ["speech-to-text", "stt"]
categories = ["multimedia::audio"]

[dependencies]
